infrastructure/tailscale/overlays/ocp/allow-to-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-router
  namespace: sigaint-tailscale
spec:
  egress:
  - to:
    - ipBlock:
        cidr: "108.61.185.81/32"
  - to:
    - namespaceSelector:
        matchLabels:
          policy-group.network.openshift.io/ingress: ""
  podSelector: {}
  policyTypes:
  - Egress
