infrastructure/tailscale/overlays/ocp/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: sigaint-tailscale
spec:
  podSelector: {}
  ingress: []
